@@ -5,6 +5,7 @@ Upcoming version
 [TASK]    Make extension installable with TYPO3 11
 [TASK]    Switch from xml to xlf language files
 [TASK]    Replace deprecated GeneralUtility::milliseconds() with native PHP function
+[TASK]    Add check if static template is included
 
 Version 4.0.1, October 2021
 [TASK]    Use new ke_search_premium 4 namespace "tpwd"
